# Hw1_Mlops

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.dvc/: config
fastapi_app/: fastapi.py  fastapi_app.py  model_framework.py  pydantic.py
grpc_app/: grpc_server.py  message_interface_pb2.py  message_interface_pb2_grpc.py
mlops/: .env  auth.py  dashboard.py  docker-compose.yaml  minio_uploader.py  model_collector.py  model_framework.py
mlops/fastapi_app/: fastapi_app.py  model_framework.py  pydantic.py  schemas.py
mlops/grpc_app/: grpc_client.py  grpc_server.py  message_interface.proto  message_interface_pb2.py  message_interface_pb2_grpc.py
tests/: test_mlops.py
